# threat-detection

./: README.md
threat-dashboard-backend/: .env  .gitignore  Cargo.toml  rust_crud.env
threat-dashboard-backend/src/: main.rs
threat-dashboard-backend/src/handlers/: mod.rs  task_handlers.rs
threat-dashboard-backend/src/models/: mod.rs  task.rs
threat-dashboard-backend/src/state/: app_state.rs  mod.rs
threat-dashboard-frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
threat-dashboard-frontend/src/: App.tsx  index.css
